Add missing translations

--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -1,4 +1,5 @@
 hello_world=hello world
-add_user=Create new user
+admin_panel=Admin panel
+create_user=Create new user
 user_list=Users List
 return=Return
