--- a/src/main/resources/lang/messages_pl.properties
+++ b/src/main/resources/lang/messages_pl.properties
@@ -1,4 +1,5 @@
 hello_world=hello world_pl
-add_user=Stwórz nowego użytkownika
+admin_panel=Panel administratora
+create_user=Stwórz nowego użytkownika
 user_list=Lista Użytkowników
 return=Powrót
