--- a/src/main/resources/lang/messages_pl.properties
+++ b/src/main/resources/lang/messages_pl.properties
@@ -3,3 +3,7 @@ admin_panel=Panel administratora
 create_user=Stwórz nowego użytkownika
 user_list=Lista Użytkowników
 return=Powrót
+user_info=Dane użytkownika
+first_name=Imię
+last_name=Nazwisko
+email=Email
