--- a/src/main/resources/lang/messages_en.properties
+++ b/src/main/resources/lang/messages_en.properties
@@ -3,3 +3,7 @@ admin_panel=Admin panel
 create_user=Create new user
 user_list=Users List
 return=Return
+user_info=User info
+first_name=First name
+last_name=Last name
+email=Email
