init adding fragment

--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -3,3 +3,4 @@ admin_panel=Admin panel
 create_user=Create new user
 user_list=Users List
 return=Return
+copyright=Copyright © 2022 Łódź University of Technology
