--- a/src/main/resources/lang/messages_pl.properties
+++ b/src/main/resources/lang/messages_pl.properties
@@ -3,3 +3,4 @@ admin_panel=Panel administratora
 create_user=Stwórz nowego użytkownika
 user_list=Lista Użytkowników
 return=Powrót
+copyright=Prawa Autorskie © 2022 Politechnika Łódzka
