--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -7,3 +7,15 @@ user_info=User info
 first_name=First name
 last_name=Last name
 email=Email
+enabled=Enabled
+confirmed=Confirmed
+last_login=Last login
+last_login_ip=Last login IP
+last_fail_login=Last fail login
+last_fail_login_ip=Last fail login IP
+last_password_change=Last password change
+last_password_change_ip=Last password change IP
+save=Save
+edit=Edit
+true=True
+false=False
