--- a/src/main/resources/lang/messages_pl.properties
+++ b/src/main/resources/lang/messages_pl.properties
@@ -7,3 +7,15 @@ user_info=Dane użytkownika
 first_name=Imię
 last_name=Nazwisko
 email=Email
+enabled=Aktywne
+confirmed=Potwierdzone
+last_login=Ostatnie logowanie
+last_login_ip=IP ostatniego logowania
+last_fail_login=Ostatnie nieudane logowanie
+last_fail_login_ip=IP ostatniego nieudanego logowania
+last_password_change=Ostatnia zmiana hasła
+last_password_change_ip=IP ostatniej zmiany hasła
+save=Zapisz
+edit=Edytuj
+true=Prawda
+false=Fałsz
