--- a/src/main/resources/lang/messages_en.properties
+++ b/src/main/resources/lang/messages_en.properties
@@ -20,3 +20,4 @@ edit=Edit
 true=True
 false=False
 copyright=Copyright © 2022 Łódź University of Technology
+successfully_edited_user_info=User data successfully edited!
