--- a/src/main/resources/lang/messages_pl.properties
+++ b/src/main/resources/lang/messages_pl.properties
@@ -20,3 +20,4 @@ edit=Edytuj
 true=Prawda
 false=Fałsz
 copyright=Prawa Autorskie © 2022 Politechnika Łódzka
+successfully_edited_user_info=Dane użytkownika zostały zaktualizowane!
