Finish admin info user

--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -21,3 +21,10 @@ true=True
 false=False
 copyright=Copyright © 2022 Łódź University of Technology
 successfully_edited_user_info=User data successfully edited!
+email_invalid_size=Email invalid size
+email_null=Email null
+enabled_null=Enabled null
+first_name_invalid_size=First name invalid size
+first_name_null=First name invalid size
+last_name_invalid_size=Last name invalid size
+last_name_null=Last name null
