--- a/src/main/resources/lang/messages_pl.properties
+++ b/src/main/resources/lang/messages_pl.properties
@@ -21,3 +21,10 @@ true=Prawda
 false=Fałsz
 copyright=Prawa Autorskie © 2022 Politechnika Łódzka
 successfully_edited_user_info=Dane użytkownika zostały zaktualizowane!
+email_invalid_size=Niepoprawna długość emaila
+email_null=Email jest pusty
+enabled_null=Pole aktywne jest puste
+first_name_invalid_size=Niepoprawna długość imienia
+first_name_null=Imię jest puste
+last_name_invalid_size=Niepoprawna długość nazwiska
+last_name_null=Nazwisko jest puste
