add error pages

--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -28,3 +28,9 @@ first_name_invalid_size=First name invalid size
 first_name_null=First name invalid size
 last_name_invalid_size=Last name invalid size
 last_name_null=Last name null
+error_generic_text=An unspecified error happened when generating the web page.
+error_400_text=An Invalid request was provided.
+error_404_text=The resource you are trying to access is unavailable at the current date.
+error_500_text=Our servers had a little trouble processing your request.
+previous_page=Go back to the previous page
+link_to_admin=Go back to the main admin page
