--- a/src/main/resources/lang/messages_pl.properties
+++ b/src/main/resources/lang/messages_pl.properties
@@ -28,3 +28,9 @@ first_name_invalid_size=Niepoprawna długość imienia
 first_name_null=Imię jest puste
 last_name_invalid_size=Niepoprawna długość nazwiska
 last_name_null=Nazwisko jest puste
+error_generic_text=Podczas generowania strony internetowej wystąpił nieokreślony błąd.
+error_400_text=Dostarczono niewłaściwe rządanie
+error_404_text=Zasób, który próbujesz otworzyć nie jest aktualnie dostępny.
+error_500_text=Nasze serwery miały kłopoty z przetworzeniem twojego rządania.
+previous_page=Wróć do poprzedniej strony
+link_to_admin=Wróć do głównej strony administracyjnej
