--- a/src/main/resources/lang/messages_pl.properties
+++ b/src/main/resources/lang/messages_pl.properties
@@ -34,3 +34,4 @@ error_404_text=Zasób, który próbujesz otworzyć nie jest aktualnie dostępny.
 error_500_text=Nasze serwery miały kłopoty z przetworzeniem twojego rządania.
 previous_page=Wróć do poprzedniej strony
 link_to_admin=Wróć do głównej strony administracyjnej
+details=Szczegóły
