--- a/src/main/resources/lang/messages_en.properties
+++ b/src/main/resources/lang/messages_en.properties
@@ -34,3 +34,4 @@ error_404_text=The resource you are trying to access is unavailable at the curre
 error_500_text=Our servers had a little trouble processing your request.
 previous_page=Go back to the previous page
 link_to_admin=Go back to the main admin page
+details=Details
