--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -38,3 +38,4 @@ details=Details
 password=password
 error_403_text=You don't have required permissions for the selected resource.
 logout=Logout
+successfully_created_account=Account created succesfully
