--- a/src/main/resources/lang/messages_en.properties
+++ b/src/main/resources/lang/messages_en.properties
@@ -38,3 +38,4 @@ password=password
 error_403_text=You don't have required permissions for the selected resource.
 logout=Logout
 details=Details
+successfully_created_account=Account created succesfully
