401 on not alowed

--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -39,3 +39,4 @@ password=password
 error_403_text=You don't have required permissions for the selected resource.
 logout=Logout
 successfully_created_account=Account created succesfully
+error_401_text=You need to authenticate to access this resource.
