--- a/src/main/resources/lang/messages_pl.properties
+++ b/src/main/resources/lang/messages_pl.properties
@@ -39,3 +39,4 @@ error_403_text=Nie masz wystarczających uprawnień, by uzyskać dostęp do zaso
 logout=Wyloguj
 details=Szczegóły
 successfully_created_account=Konto utworzone pomyślnie
+error_401_text=Musisz się uwierzytelnić by mieć dostęp do tego zasobu.
