fix styles in error, list, admin

--- a/src/main/resources/lang/messages_en.properties
+++ b/src/main/resources/lang/messages_en.properties
@@ -39,3 +39,8 @@ error_403_text=You don't have required permissions for the selected resource.
 logout=Logout
 details=Details
 successfully_created_account=Account created succesfully
+name=Full name
+access_levels=Access levels
+id=Id
+admin=Admin
+user=User
