--- a/src/main/resources/lang/messages_pl.properties
+++ b/src/main/resources/lang/messages_pl.properties
@@ -39,3 +39,8 @@ error_403_text=Nie masz wystarczających uprawnień, by uzyskać dostęp do zaso
 logout=Wyloguj
 details=Szczegóły
 successfully_created_account=Konto utworzone pomyślnie
+name=Imię i nazwisko
+access_levels=Poziomy dostępu
+id=Id
+admin=Administratorsss
+user=Użytkownik
