--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -38,6 +38,7 @@ details=Details
 password=password
 error_403_text=You don't have required permissions for the selected resource.
 logout=Logout
+login=Login
 successfully_created_account=Account created succesfully
 name=Full name
 access_levels=Access levels
