--- a/src/main/resources/lang/messages_en.properties
+++ b/src/main/resources/lang/messages_en.properties
@@ -37,6 +37,7 @@ link_to_admin=Go back to the main admin page
 password=password
 error_403_text=You don't have required permissions for the selected resource.
 logout=Logout
+login=Login
 details=Details
 successfully_created_account=Account created succesfully
 name=Full name
