--- a/src/main/resources/lang/messages_pl.properties
+++ b/src/main/resources/lang/messages_pl.properties
@@ -37,11 +37,12 @@ link_to_admin=Wróć do głównej strony administracyjnej
 password=hasło
 error_403_text=Nie masz wystarczających uprawnień, by uzyskać dostęp do zasobu.
 logout=Wyloguj
+login=Zaloguj
 details=Szczegóły
 successfully_created_account=Konto utworzone pomyślnie
 name=Imię i nazwisko
 access_levels=Poziomy dostępu
 id=Id
-admin=Administratorsss
+admin=Administrator
 user=Użytkownik
 error_401_text=Musisz się uwierzytelnić by mieć dostęp do tego zasobu.
