--- a/src/main/resources/lang/messages_pl.properties
+++ b/src/main/resources/lang/messages_pl.properties
@@ -46,3 +46,4 @@ id=Id
 admin=Administrator
 user=Użytkownik
 error_401_text=Musisz się uwierzytelnić by mieć dostęp do tego zasobu.
+home=Strona główna
