--- a/src/main/resources/lang/messages_pl.properties
+++ b/src/main/resources/lang/messages_pl.properties
@@ -47,3 +47,4 @@ admin=Administrator
 user=Użytkownik
 error_401_text=Musisz się uwierzytelnić by mieć dostęp do tego zasobu.
 home=Strona główna
+welcome=Witaj
