--- a/src/main/resources/lang/messages_pl.properties
+++ b/src/main/resources/lang/messages_pl.properties
@@ -48,3 +48,4 @@ user=Użytkownik
 error_401_text=Musisz się uwierzytelnić by mieć dostęp do tego zasobu.
 home=Strona główna
 welcome=Witaj
+login_to_your_account=Zaloguj się na swoje konto
