--- a/src/main/resources/lang/messages_pl.properties
+++ b/src/main/resources/lang/messages_pl.properties
@@ -1,7 +1,7 @@
 hello_world=hello world_pl
 admin_panel=Panel administratora
-create_user=Stwórz nowego użytkownika
-user_list=Lista Użytkowników
+create_new_user=Stwórz nowego użytkownika
+user_list=Lista użytkowników
 return=Powrót
 user_info=Dane użytkownika
 first_name=Imię
@@ -49,3 +49,5 @@ error_401_text=Musisz się uwierzytelnić by mieć dostęp do tego zasobu.
 home=Strona główna
 welcome=Witaj
 login_to_your_account=Zaloguj się na swoje konto
+create=Dodaj
+list=Lista
