--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -51,4 +51,5 @@ welcome=Welcome
 login_to_your_account=Login to your account
 create=Create
 list=List
+lorem_ipsum=Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
 
