--- a/src/main/resources/lang/messages_pl.properties
+++ b/src/main/resources/lang/messages_pl.properties
@@ -51,3 +51,4 @@ welcome=Witaj
 login_to_your_account=Zaloguj się na swoje konto
 create=Dodaj
 list=Lista
+lorem_ipsum=Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
