--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -52,4 +52,5 @@ login_to_your_account=Login to your account
 create=Create
 list=List
 lorem_ipsum=Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+login_button=Login
 
