--- a/src/main/resources/lang/messages_pl.properties
+++ b/src/main/resources/lang/messages_pl.properties
@@ -52,3 +52,4 @@ login_to_your_account=Zaloguj się na swoje konto
 create=Dodaj
 list=Lista
 lorem_ipsum=Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+login_button=Zaloguj
