--- a/src/main/resources/lang/messages_en.properties
+++ b/src/main/resources/lang/messages_en.properties
@@ -53,3 +53,4 @@ create=Create
 list=List
 lorem_ipsum=Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
 login_button=Login
+version_mismatch=Version mismatch
