--- a/src/main/resources/lang/messages_pl.properties
+++ b/src/main/resources/lang/messages_pl.properties
@@ -53,3 +53,4 @@ create=Dodaj
 list=Lista
 lorem_ipsum=Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
 login_button=Zaloguj
+version_mismatch=Niezgnodność wersji
