Add translation for exceptions in form

--- a/src/main/resources/lang/messages_en.properties
+++ b/src/main/resources/lang/messages_en.properties
@@ -54,3 +54,4 @@ list=List
 lorem_ipsum=Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
 login_button=Login
 version_mismatch=Version mismatch
+email_exist=Email already exists!
