--- a/src/main/resources/lang/messages_pl.properties
+++ b/src/main/resources/lang/messages_pl.properties
@@ -54,3 +54,4 @@ list=Lista
 lorem_ipsum=Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
 login_button=Zaloguj
 version_mismatch=Niezgnodność wersji
+email_exist=Email już istnieje!
