Add exceptions translations

--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -55,4 +55,13 @@ lorem_ipsum=Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius
 login_button=Login
 version_mismatch=Version mismatch
 email_exist=Email already exists!
+account_not_found=Account not found
+account_not_confirmed=Account not confirmed
+account_disabled=Account disabled
+invalid_credentials=Invalid credentials
+entity_not_found=Entity not found
+invalid_token=Invalid token
+not_current_user_token=Not current user token
+not_current_user_refresh_token=Not current user refresh token
+invalid_refresh_token=Invalid refresh token
 
