--- a/src/main/resources/lang/messages_pl.properties
+++ b/src/main/resources/lang/messages_pl.properties
@@ -55,3 +55,12 @@ lorem_ipsum=Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius
 login_button=Zaloguj
 version_mismatch=Niezgnodność wersji
 email_exist=Email już istnieje!
+account_not_found=Konta nie znaleziono
+account_not_confirmed=Konto nie zostało potwierdzone
+account_disabled=Konto zablokowane
+invalid_credentials=Niepoprawne dane logowania
+entity_not_found=Obiektu nie znaleziono
+invalid_token=Niepoprawny token
+not_current_user_token=Token nie należy do tego użytkownika
+not_current_user_refresh_token=Token odświeżający nie należy do tego użytkownika
+invalid_refresh_token=Niepoprawny token odświeżający
